...
  sendInvitation: " Enviar invitación",
  finishingRecovery: "Finalizando recuperación",
  return: "Regresar",
  guardiansDescriptionStatus: "Aquí verás el estado de aprobación de tu cuenta",
  noGuardians: "Aún no hay votos de tus guardianes",
...
  connectItem2Desc: "Tomaremos una selfie para verificar que eres tú",
  termsPrefix: "Leí y acepto los ",
  termsLink: "Términos y Condiciones",
  termsAnd: ", la ",
  termsPrivacy: "Política de privacidad",
  termsSuffix: " y entiendo por qué se solicita mi carnet.",
  termsTitle: "Términos y Condiciones de Uso",
  termsLastUpdate: "Última actualización: 2025",
  termsSection1Title: "1. Uso de datos personales",
  termsSection1Subtitle:
    "Willa Wallet solicita tu carnet de identidad y acceso a tu cámara únicamente para verificar tu identidad. 🔒 No almacenamos, compartimos ni vendemos tu información. Tu verificación se realiza de forma temporal, con fines de seguridad y protección de cuenta.",
  termsSection2Title: "2. Creación de cuenta",
  termsSection2Subtitle:
    "Para usar la app, debes: Ser mayor de 18 años. Aceptar estos términos. Proporcionar datos reales para la validación.",
...
  infoMessage:
    "Para cumplir con normas regulatorias, verificamos tu identidad con una foto de tu carnet.",
  continueButton: "Continuar",
  // page 2
  idVerificationTitle: "Carnet de identidad",
  toRecovery: "Para recuperar tu cuenta, ",
  toContinue: "Para continuar, ",
...
  backLabel: "Reverso",
  checking: "Verificando...",
  recoveryAccount: "Recuperar cuenta",
  DniExists: "Ya fue registrado, intente recuperar su cuenta.",
  DniIssueTitle: "El carnet:",
...
  loadingCamera: "Cargando cámara...",
  tapToSelectPhoto: "Toca para seleccionar una foto",
  nextButton: "Siguiente",
  verifyingIdentityTitle: "Estamos verificando tu identidad",
  verifyingIdentityMessage:
...
  descriptionConfirmData:
    "Por seguridad y cumplimiento regulatorio, revisa que la información extraída de tu documento sea correcta antes de continuar.",
  labelFullName: "Nombre completo",
  labelDocumentId: "CI / N.º de documento",
  labelBirthDate: "Fecha de nacimiento",
  labelNationality: "Nacionalidad",
...
    "Tu huella se guarda de forma local y segura, no se comparte con nadie",
  btnActivateFingerprint: "Activar huella",
  btnActivateFaceId: "Activar Touch ID/Face ID",
  btnActivateLater: "Activar más tarde",
  //page 8
...
  confirmPinDescription:
    "Vuelve a ingresar el mismo PIN para verificar que lo escribiste correctamente.",
  confirmPinButton: "Confirmar PIN",
  incorrectPinError: "PIN incorrecto. Intenta de nuevo",
  loading: "Cargando...",
...
  doneRegister: "¡Registro completado!",
  //inicio de sesión
  walletAccess: "Acceso a la billetera",
  understand: "Entendido",

  // Perfil
  personalData: "Datos personales",
  personalDataValue: "Mira tu información",
  dataBackup: "Respaldo de identidad",
  dataBackupValue: "Guarda un archivo de recuperación",
  guardians: "Guardianes",
  guardianSettings: "Configuración de Guardianes",
  threshholdLabel:
...
  birthDateTitle: "Fecha de nacimiento",
  nationalityTitle: "Nacionalidad",
  backupFileTitle: "Código QR de recuperación",
  backupFileDescription:
    "Guarda los datos de tu identidad en un archivo. Si pierdes acceso a tu cuenta, podrás usarla para recuperarla.",
...
  registeredInvitations: "Invitaciones registradas",

  //Inicio
  connectTitle: "Aplicación Electoral",
  connectBtnInfo: "Saber más",
  connectBtnRegister: "Registrar cuenta",
  register: "REGISTRARSE",
  sessionReceived: "Sesión recibida",
...
  pin: "Tu PIN",
  pinDesc: "Necesitarás tu PIN de acceso",
  retryRecovery: "Reintentar",
  recoveringData: "Recuperando datos...",
  recoverySuccess:
...
  recoveryError: "Error en la recuperación. Verifica tu CI y PIN.",

  connectBtnLogin: "Tengo una cuenta",
  wira: "Tu Voto Decide",
  downloadingData: "Descargando datos adicionales: ",
...
  onBoardingTitleText1: "Obtén tu identidad digital soberana",
  onBoardingTitleText2: "Hojas de trabajo electorales inalterables con NFTs",
  onBoardingTitleText3: "Validación abierta, con firma electrónica",
  onBoardingTitleText4:
    "Transparencia con Blockchain e Inteligencia Artificial",
  onBoardingTitleText5: "Regístrate y contribuye ya!",
  onBoardingDescriptionText1:
    "Al registrarte obtienes un sistema de identidad digital, que protege tus datos con contratos inteligentes.",
...

  //Secction More
  moreConfig: "Configuración",
  moreConfig1Title: "Ajustes de seguridad",
  moreConfig1Subtitle: "autenticación de dos factores",
  moreConfig2Title: "Límite de compras",
...

  moreOthers: "Otros",
  moreOthers1Title: "Centro de ayuda",
  moreOthers1Subtitle: "Ayuda y soporte",
  moreOthers2Title: "Términos y condiciones",
  moreOthers2Subtitle: "Reglas de uso",
  moreOthers3Title: "Política de privacidad",
  moreOthers3Subtitle: "Datos personales",
  moreOthers4Title: "Cerrar sesión",
  moreOthers4Subtitle: "Salir de la cuenta",
  contactSupportTitle: "Contactar soporte",
...
  contactSupportCopied: "Correo copiado al portapapeles",
  //Secury data
  security1Title: "Cambiar PIN",
  security1Subtitle: "Actualiza tu PIN de acceso",
  security2Title: "Face ID",
...
  security3Title: "Correo electrónico",
  security3Subtitle: "Crear tu correo",
  security4TitleAndroid: "Huella dactilar",
  security4TitleIos: "Face ID / Touch ID",
  security4SubtitleAndroid: "Activar huella",
...

  //guardianes
  guardiansTitle: "Tus Guardianes",
  addGuardian: "Agregar guardián",
  addGuardianSubtitle:
    "Ingresa el CI / N.°. de documento de la persona que quieres asignar como guardián.",
  addGuardianSubtitleSpan: " Debe tener una cuenta abierta en Tu Voto Decide.",
  approved: "Aprobado",
  pending: "Pendiente",
  rejected: "Rechazado",
  deleted: "Eliminado",
...
  home: "Inicio",
  market: "USDT",
  profile: "Perfil",
  portfolio: "Más",
  financial: "Financial",
  totalAssetValue: "Total asset value",
...
  downloadReportText:
    "Malesuada at et non accumsan a morbi fames volutpat volutpat.",
  cancel: "Cancelar",
  darkMode: "Dark Mode",
  darkModeValue: "Choose Your Theme",
...
  successfulRedeem: "Successful Redeem",
  logOut: "Cerrar sesión",
  areYouSureWantToLogout: "¿Seguro que quieres cerrar sesión?",
  pleaseSelectReason: "Please Select Your Reason",

  // ========== VOTACIÓN / ELECTORAL COMPONENTS ==========
  // Home Screen
  homeWelcome: "¡Bienvenido,",
  uploadActa: "Subir Hoja de Trabajo",
  uploadActaDescription: "Sube la hoja de trabajo de tu mesa.",
...
  selectDocumentToReview: "Selecciona la hoja de trabajo que deseas revisar",
  errorLoadingWitnesses: "Error al cargar los atestiguamientos",
  connectionError: "Error de conexión",
  connectionErrorMessage:
    "No se pudo conectar con el servidor. Verifica tu conexión a internet.",
...
  photoPreview: "Vista previa de la foto",

  personaNotFound: "Persona no encontrada",
  noGuardiansAssigned: "Este carnet no tiene guardianes asignados",
  removed: "Removido",
...
  blockchainConsultBanner:
    "Blockchain Consultora desarrolló esta aplicación, contáctelos",
  needBlockchainApp: "¿Necesitas una aplicación en Blockchain?",

  connectItem1: "Obtén tu identidad digital soberana",
...

  // Home Screen
  participate: "Participar",
  sendAct: "Enviar Hoja de Trabajo",
  sendActDescription: "Revisa o sube una hoja de trabajo",
...
  deleteAccountSubmit: "Eliminar cuenta",
  deleteAccountDeleting: "Eliminando cuenta...",
  deleteAccountWrongPin: "PIN incorrecto",
  deleteAccountRequestError:
    "No pudimos enviar la solicitud de eliminación. No se eliminó ningún dato, intenta nuevamente.",
...
