...
            style={styles.imageErrorText}>
            Error cargando imagen
          </CText>
          <CText
            testID="actaDetailImageErrorSubtext"
            style={styles.imageErrorSubtext}>
            Verifica tu conexión a internet
          </CText>
        </View>
      );
    }

    return (
...
