...
          )}
        </View>
      </KeyBoardAvoidWrapper>

      <View testID="registerUser1BottomSection" style={localStyle.bottomTextContainer}>
        <View testID="termsCheckboxContainer" style={localStyle.rowWithGap}>
          <TouchableOpacity testID="termsCheckbox" onPress={onPressRememberMe}>
            <Ionicons
              testID="termsCheckboxIcon"
              name={check ? 'checkbox' : 'square-outline'}
              color={colors.primary}
              size={moderateScale(24)}
            />
...
